--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,313 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# Conditional Probability - Lab\n", "\n", "## Introduction\n", "\n", "In order to be ready for real-world applications of probability, it is important to understand what happens when probabilities are not independent. Very often, the probability of a certain event depends on other events happening! Let's see how this all works in this lab.\n", "\n", "## Objectives\n", "\n", "You will be able to:\n", "\n", "* Differentiate between independent and dependent events\n", "* Use the multiplication rule to find the probability of the intersection of two events\n", "\n", "## Exercise 1\n", "A coin is tossed and a single 6-sided dice is rolled. Find the probability of landing on the head side of the coin and rolling a 3 on the dice."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Exercise 2\n", "\n", "\n", "After conducting a survey, one of the outcomes was that 8 out of 10 of the survey subjects liked chocolate chip cookies. If three survey subjects are chosen at random **with replacement**, what is the probability that all three like chocolate chip cookies?"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Exercise 3\n", "70% of your friends like chocolate flavored ice cream, and 35% like chocolate AND like strawberry flavors.\n", "\n", "What percent of those who like chocolate also like strawberry?"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["50% of your friends who like chocolate also like strawberry\n", "\n", "## Exercise 4\n", "What is the probability of drawing 2 consecutive aces from a deck of cards. "]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Exercise 5\n", "In a manufacturing factory that produces a certain product, there are 100 units of the product, 5 of which are defective. We pick three units from the 100 units at random. \n", "\n", "What is the probability that none of them are defective?\n", "Hint: Use the chain rule here!"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Exercise 6\n", "\n", "Let's consider the example where 2 dice are thrown. Given that **at least one** of the dice has come up on a number higher than 4, what is the probability that the sum is 8?\n", "\n", "Let $i,j$ be the numbers shown on the dice. The events $A$ and $B$ are described below:\n", "\n", "* **Event $A$ is when either $i$ or $j$ is 5 or 6** (keep an eye on either - or)\n", "* **Event $B$ is when $i + j = 8$**\n", "\n", "\n", "* What is the size of sample space $\\Omega$ ?\n", "* What is $P(A \\cap B)$ ?\n", "* What is $P(A)$ ?\n", "* Use above to calculate $P(B \\mid A)$"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Exercise 7\n", "\n", "Let's consider a credit card example. At a supermarket, customers are selected randomly, the store owner recorded whether costumers owned a Visa card (event A) or an Amex credit card (event B). Some customers own both cards.\n", "You can assume that:\n", "\n", "- $P(A)$ = 0.5\n", "- $P(B)$ = 0.4\n", "- both $A$ and $B$ = 0.25.\n", "\n", "\n", "With the knowledge we have about conditional probabilities, compute and interpret the following probabilities:\n", "\n", "- $P(B \\mid A)$\n", "- $P(B' \\mid A)$\n", "- $P(A \\mid B)$\n", "- $P(A' \\mid B)$\n"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Summary \n", "\n", "In this lab, you practiced conditional probability and its theorem with some simple problems. The key takeaway from this lab is to be able to identify random events as dependent or independent and calculating the probability of their occurrence using appropriate methods. Next, you'll learn about some more conditional probability axioms, building on the knowledge we have so far. "]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.7.3"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conditional Probability - Lab\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "In order to be ready for real-world applications of probability, it is important to understand what happens when probabilities are not independent. Very often, the probability of a certain event depends on other events happening! Let's see how this all works in this lab.\n",
+    "\n",
+    "## Objectives\n",
+    "\n",
+    "You will be able to:\n",
+    "\n",
+    "* Differentiate between independent and dependent events\n",
+    "* Use the multiplication rule to find the probability of the intersection of two events\n",
+    "\n",
+    "## Exercise 1\n",
+    "A coin is tossed and a single 6-sided dice is rolled. Find the probability of landing on the head side of the coin and rolling a 3 on the dice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coin_head = 0.5\n",
+    "dice_3 = 1/6\n",
+    "head_plus_3 = coin_head * dice_3# Your code here\n",
+    "head_plus_3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2\n",
+    "\n",
+    "\n",
+    "After conducting a survey, one of the outcomes was that 8 out of 10 of the survey subjects liked chocolate chip cookies. If three survey subjects are chosen at random **with replacement**, what is the probability that all three like chocolate chip cookies?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "like_chip = 0.8\n",
+    "prob = like_chip**3\n",
+    "prob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3\n",
+    "70% of your friends like chocolate flavored ice cream, and 35% like chocolate AND like strawberry flavors.\n",
+    "\n",
+    "What percent of those who like chocolate also like strawberry?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "choc = 0.7\n",
+    "choc_straw = 0.35\n",
+    "prob = (choc_straw)/choc\n",
+    "prob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "50% of your friends who like chocolate also like strawberry\n",
+    "\n",
+    "## Exercise 4\n",
+    "What is the probability of drawing 2 consecutive aces from a deck of cards. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "first_ace = 4/52\n",
+    "second_ace = 3/51\n",
+    "prob = (first_ace*second_ace)\n",
+    "prob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 5\n",
+    "In a manufacturing factory that produces a certain product, there are 100 units of the product, 5 of which are defective. We pick three units from the 100 units at random. \n",
+    "\n",
+    "What is the probability that none of them are defective?\n",
+    "Hint: Use the chain rule here!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "first_ok = 95/100\n",
+    "second_ok = 94/99\n",
+    "third_ok = 93/98\n",
+    "prob=first_ok*second_ok*third_ok\n",
+    "prob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 6\n",
+    "\n",
+    "Let's consider the example where 2 dice are thrown. Given that **at least one** of the dice has come up on a number higher than 4, what is the probability that the sum is 8?\n",
+    "\n",
+    "Let $i,j$ be the numbers shown on the dice. The events $A$ and $B$ are described below:\n",
+    "\n",
+    "* **Event $A$ is when either $i$ or $j$ is 5 or 6** (keep an eye on either - or)\n",
+    "* **Event $B$ is when $i + j = 8$**\n",
+    "\n",
+    "\n",
+    "* What is the size of sample space $\\Omega$ ?\n",
+    "* What is $P(A \\cap B)$ ?\n",
+    "* What is $P(A)$ ?\n",
+    "* Use above to calculate $P(B \\mid A)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1388888888888889"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#6 possible ways to throw dice i, 6 possible ways to throw dice j, therefore 36 possible permutations of 2 dice\n",
+    "sample_space = 6*6 \n",
+    "\n",
+    "# prob 2/6 for dice i to throw 5 or 6 and 2/6 for dice j to throw 5 or 6 but note the 'either...or' so use addition rule\n",
+    "prob_event_a = 2/6 + 2/6  - (2/6)*(2/6)\n",
+    "\n",
+    "# five ways in sample space to throw 8: 1) i=4,j=4 2) i=5,j=3, 3) i=6,j=2, 4) i=3,j=5, 5) i=2,j=6\n",
+    "# note 1) doesn't work because neither i nor j is a 5 or 6 - both are 4s\n",
+    "prob_event_b = 5/36 \n",
+    "\n",
+    "# product rule of events a and b\n",
+    "prob_a_n_b = prob_event_a*prob_event_b \n",
+    "\n",
+    "#conditional probability of b given a\n",
+    "prob_b_given_a = prob_a_n_b/prob_event_a \n",
+    "\n",
+    "prob_b_given_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 7\n",
+    "\n",
+    "Let's consider a credit card example. At a supermarket, customers are selected randomly, the store owner recorded whether costumers owned a Visa card (event A) or an Amex credit card (event B). Some customers own both cards.\n",
+    "You can assume that:\n",
+    "\n",
+    "- $P(A)$ = 0.5\n",
+    "- $P(B)$ = 0.4\n",
+    "- both $A$ and $B$ = 0.25.\n",
+    "\n",
+    "\n",
+    "With the knowledge we have about conditional probabilities, compute and interpret the following probabilities:\n",
+    "\n",
+    "- $P(B \\mid A)$\n",
+    "- $P(B' \\mid A)$\n",
+    "- $P(A \\mid B)$\n",
+    "- $P(A' \\mid B)$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "p_a = 0.5\n",
+    "p_b = 0.4\n",
+    "p_a_n_b = 0.25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_b_given_a = p_a_n_b/p_a\n",
+    "p_complement_b_given_a = 1-p_b_given_a\n",
+    "p_a_given_b = p_a_n_b/p_b\n",
+    "p_complement_a_given_b = 1-p_a_given_b\n",
+    "print(p_b_given_a,p_complement_b_given_a,p_a_given_b,p_complement_a_given_b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary \n",
+    "\n",
+    "In this lab, you practiced conditional probability and its theorem with some simple problems. The key takeaway from this lab is to be able to identify random events as dependent or independent and calculating the probability of their occurrence using appropriate methods. Next, you'll learn about some more conditional probability axioms, building on the knowledge we have so far. "
+   ]
+  }
+ ],
+ "metadata": {
+  "hide_input": false,
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
